# shared-cookbook

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICES.md  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  deploy.yml
apps/api/: .dockerignore  Directory.Build.props  Dockerfile  FamilienKochbuch.sln  SharedCookbook.sln  openapi.json
apps/python-extractor/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
apps/python-extractor/src/extractor/: __init__.py  config.py  config_loader.py  frames.py  main.py  progress.py  prompt_seed.py
apps/python-extractor/src/extractor/llm/: __init__.py  azure_openai.py  errors.py  factory.py  mock.py  ollama.py  provider.py
apps/python-extractor/src/extractor/pipeline/: __init__.py  blog.py  chat.py  jsonld_parser.py  photo.py  post_process.py  types.py  url.py  video.py
apps/python-extractor/src/extractor/prompts/: __init__.py  chat.py  language.py  photo_recipe.py  recipe_extraction.py
apps/python-extractor/src/extractor/security/: __init__.py  hmac_middleware.py
apps/python-extractor/tests/: conftest.py  test_ai_disabled_endpoints.py  test_azure_integration.py  test_azure_provider.py  test_blog_fallback.py  test_blog_jsonld.py  test_blog_recipe_scrapers.py  test_candidate_thumbnails_jsonld.py  test_candidate_thumbnails_video.py  test_chat_endpoints.py  test_chat_prompts.py  test_config.py  test_config_integration.py  test_config_loader.py  test_disabled_provider.py  test_extract_photos_endpoint.py  test_extract_url_endpoint.py  test_factory.py  test_frames_endpoint.py  test_frames_store.py  test_health.py  test_hmac_middleware.py  test_http_from_llm_error.py  test_jsonld_parser.py  test_language_directive.py  test_llm_errors.py  test_llm_provider_interface.py  test_mock_provider.py  test_null_provider.py  test_ollama_provider.py  test_photo_prompts.py  test_pipeline_chat.py  test_pipeline_photo.py  test_pipeline_post_process.py  test_pipeline_types.py  test_pipeline_url.py  test_pipeline_video.py  test_progress_reporter.py  test_prompt_seed.py  test_recipe_prompts.py  (+4 more)
apps/python-extractor/tests/fixtures/blog/: fallback_bare.html  jsonld_spaghetti.html  scraper_chefkoch.html
apps/python-extractor/tests/fixtures/jsonld/: chefkoch_sample.html  graph_sample.html  howto_section_sample.html  seriouseats_sample.html
apps/web/: Caddyfile  Dockerfile  eslint.config.js  index.html  package.json  playwright.config.ts  playwright.docker.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/web/e2e/: cook-now-landscape.spec.ts  cook-now.spec.ts  cover-picker.spec.ts  error-ux-silent-failure.spec.ts  group-detail-split.spec.ts  language-propagation.spec.ts  offline.spec.ts  recipe-components.spec.ts  recipe-detail-two-column.spec.ts  recipe-global-search.spec.ts  recipe-list-pagination.spec.ts  recipe-reimport.spec.ts  (+3 more)
docs/: SECURITY-AUDIT-2026-04.md  SECURITY.md  SETUP.md  bugs-backlog.md  design-implementation-progress.md  infra-secrets.md  ops.md  phase-0-results.md  phase-1-progress.md  phase-2-hoppr-audit.md  web-breakpoints.md
docs/known-issues/: photo-storage-signed-urls.md
docs/mockups/: README.md  dunkler-foodie-login.html  index.html  variant-a-home.html  variant-a-sage.html  variant-b-crisp.html  variant-b-home.html  variant-c-editorial.html  variant-c-home.html  variants-picker.html  warme-kueche-group-detail.html  warme-kueche-home.html  warme-kueche-login.html  warme-kueche-recipe-detail.html  warme-kueche-recipe-form.html
docs/plans/: 2026-04-17-familien-kochbuch-design.md  2026-04-18-ap1-user-profile.md  2026-04-18-bf1-quick-bugfixes.md  2026-04-18-gm1-group-management.md  2026-04-18-p2-0-python-scaffold.md  2026-04-18-p2-1-llm-provider.md  2026-04-18-p2-10-nutrition.md  2026-04-18-p2-3-photo-extraction.md  2026-04-18-p2-4-ai-chat.md  2026-04-18-p2-7-url-import-ui.md  2026-04-18-p2-8-photo-import-ui.md  2026-04-18-p2-9-ai-chat-ui.md  2026-04-18-phase-2-architecture.md  2026-04-18-ux1-pu-photo-upload-create.md  2026-04-19-pf1-staged-photo-promote.md  2026-04-19-pf2-token-usage-tracking.md  2026-04-19-pf3-smtp-email.md  2026-04-19-phase-3-architecture.md  2026-04-20-chat-rebuild-architecture.md  2026-04-20-phase-5-offline-architecture.md  2026-04-21-cook-now-mode-draft.md  2026-04-21-cross-group-search-design.md  2026-04-21-recipe-reimport-draft.md  2026-04-21-tablet-layout-draft.md  2026-04-22-open-source-release-plan.md  2026-04-22-share-file-target-design.md  2026-04-22-share-multi-url-design.md  2026-04-22-share-target-design.md  2026-04-24-lang-aware-system-prompts-design.md  2026-04-25-contrib-1-contributing-design.md  2026-04-25-english-1-codebase-consistency-design.md  2026-04-25-lang-2-recipe-retranslation-design.md  2026-04-25-rename-1-shared-cookbook-design.md  2026-04-25-rename-2-dotnet-namespace-design.md  2026-04-26-mealplan-slot-ux-design.md  design-implementation-plan.md  phase-1-implementation-plan.md
docs/reviewing/: anti-shortcut-checklist.md
infra/: Caddyfile  Caddyfile.prod
infra/seaweedfs/: s3.json
scripts/: export-openapi.sh  render-pwa-icons.js  smoke-chat.sh  smoke-live.sh  smoke-test.sh  verify-deploy-workflow.sh
(+1140 files in other folders)
