[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "extractor"
version = "0.1.0"
description = "Familien-Kochbuch Python recipe-extraction microservice (FastAPI)."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "Proprietary" }
authors = [{ name = "Familien-Kochbuch" }]

# Pins are exact (==) to keep deploys reproducible. Do NOT relax to ^-style
# ranges; that silently upgrades on every fresh install. Bumps happen
# deliberately in dedicated dependency-update slices.
dependencies = [
  "fastapi==0.136.0",
  "uvicorn[standard]==0.44.0",
  "pydantic==2.13.2",
  "pydantic-settings==2.13.1",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "httpx==0.28.1",
  "ruff==0.15.11",
  "mypy==1.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/extractor"]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, B: bugbear, UP: pyupgrade,
# S: bandit (security), SIM: simplify, RUF: ruff-specific.
select = ["E", "W", "F", "I", "B", "UP", "S", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Tests may assert on constants + use fixtures without calling them directly.
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
show_error_codes = true
files = ["src", "tests"]
