[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shared-cookbook-extractor"
version = "0.1.0"
description = "shared-cookbook Python recipe-extraction microservice (FastAPI)."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "Proprietary" }
authors = [{ name = "Familien-Kochbuch" }]

# Pins are exact (==) to keep deploys reproducible. Do NOT relax to ^-style
# ranges; that silently upgrades on every fresh install. Bumps happen
# deliberately in dedicated dependency-update slices.
dependencies = [
  "fastapi==0.136.1",
  "uvicorn[standard]==0.46.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.1",
  # P2-1: real HTTP against the Azure OpenAI Responses API. httpx was
  # dev-only in P2-0 (TestClient); promoted to runtime here because
  # `AzureOpenAIProvider` uses `httpx.AsyncClient` directly.
  "httpx==0.28.1",
  # P2-1: retry with exponential backoff + Retry-After honouring for
  # transient Azure errors (5xx, 429). Tiny pure-Python lib.
  "tenacity==9.1.4",
  # P2-2 blog path: three-layered HTML → recipe extractors.
  # `extruct` parses JSON-LD / microdata / RDFa blocks from HTML.
  # `recipe-scrapers` covers 1000+ cooking sites with hand-rolled
  # parsers; faster path than falling through to plain BS4.
  # `beautifulsoup4` + `lxml` backs the final fallback (plain text
  # dump of <article>/<main>/<body>).
  "extruct==0.18.0",
  "recipe-scrapers==15.11.0",
  "beautifulsoup4==4.14.3",
  "lxml==6.1.0",
  # P2-2 video path: yt-dlp pulls the mp4 + metadata; faster-whisper
  # (backed by CTranslate2) transcribes the audio on CPU in int8
  # quantised mode. The `large-v3` weights live in a named docker
  # volume mounted at $HF_HOME — see docker-compose*.yml.
  "yt-dlp==2026.3.17",
  "faster-whisper==1.2.1",
  "ctranslate2==4.7.1",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "ruff==0.15.12",
  "mypy==1.20.2",
  # P2-1: stub the Azure Responses API in always-on tests. MSW-style
  # route matching on httpx calls; no real network.
  "respx==0.23.1",
  # P2-2: validate the RECIPE_SCHEMA JSON Schema at test time so a typo
  # in the schema fails the suite rather than at runtime against Azure.
  "jsonschema==4.26.0",
  "types-jsonschema==4.26.0.20260408",
]

[tool.hatch.build.targets.wheel]
packages = ["src/extractor"]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, B: bugbear, UP: pyupgrade,
# S: bandit (security), SIM: simplify, RUF: ruff-specific.
select = ["E", "W", "F", "I", "B", "UP", "S", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Tests may assert on constants + use fixtures without calling them directly.
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
show_error_codes = true
files = ["src", "tests"]
